practing of call and apply and bind

--- a/callback.html
+++ b/callback.html
@@ -16,15 +16,15 @@
         const func2 = (sum) => {
             console.log(sum)
         }
-        const person = (num1, num2, callback) => {
+        const person = (num1, num2,callback) => {
             let sum = num1 + num2;
             callback(sum)
         }
         person(20, 20, func1);
         person(40, 40, func2);
 
-        const prison = (num1) => {
-            let sum = num1;
+        const prison = (num1,num2) => {
+            let sum = num1+num2;
             return sum
         }
         const per = prison(20,30);
