writing a note navbar

--- a/.vscode/Navbar/navbar.html
+++ b/.vscode/Navbar/navbar.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- NOTE 
+     always give height into the .mani_menu. if you give paddig instead of height then i will sufer with problem. when hover the sub_menu then if you want to take you cursor on the sub_main_menu then your  sub_main_menu will disappear automatically. so to avoid this problem you have to give height to the main_menu instead of giving padding.   
+    -->
     <style>
         *,*::after,*::before{
             margin:0;
